Balance changes and added encounters